--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,35 @@
-.weatherItem {
-  background-color: lightblue;
-  margin: 20px;
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: rgb(137, 196, 255);
+  color: rgb(248, 219, 39);
 }
 
-.fav {
-  background-color: yellow;
+.searchContainer {
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
+.container {
+  margin-top: 50px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.delete {
+  top: 5px;
+  align-self: flex-end;
+}
 .mainCard {
-  margin: 10%;
+  width: 100%;
   padding: 10px;
   border: solid 2px grey;
   display: flex;
@@ -16,8 +37,8 @@
   align-items: center;
 }
 .fav {
-  border: solid 4px gold;
-  /* background-image: url("src/cloud.jpeg"); */
+  border: solid 4px rgb(248, 219, 39);
+  background-color: rgb(47, 100, 214);
 }
 .content {
   padding: 10px;
